<resources>
    <string name="app_name">MalwareDB</string>
    <string name="placeholder">Placeholder</string>
    <string name="malware_name">Name</string>
    <string name="malware_type">Type</string>
    <string name="malware_platform">Platform</string>
    <string name="malware_source_language">Source Language</string>
    <string name="malware_file_type">File Type</string>
    <string name="malware_size">Size (bytes)</string>
    <string name="malware_author">Author</string>
    <string name="malware_origin">Origin</string>
    <string name="malware_date_discovery">Discovery Date</string>
    <string name="malware_aliases">Aliases</string>
    <string name="malware_links">Links</string>
    <string name="malware_description">Description</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_load_sample">Load Sample List</string>
    <string name="menu_apply">Apply</string>
    <string name="menu_edit">Edit</string>
    <string name="unknown">Unknown</string>
    <string-array name="add_type">
        <item>Type</item>
        <item>Virus</item>
        <item>Worm</item>
        <item>Trojan Horse</item>
        <item>Exploit</item>
        <item>PUP</item>
    </string-array>
    <string-array name="add_platform">
        <item>Platform</item>
        <item>Windows</item>
        <item>DOS</item>
        <item>Linux</item>
        <item>Android</item>
        <item>Java</item>
        <item>MS Office</item>
        <item>Amiga</item>
        <item>Palm</item>
        <item>Symbian</item>
        <item>Mac OS</item>
        <item>iOS</item>
        <item>Various</item>
    </string-array>
    <string-array name="add_source_language">
        <item>Source Language</item>
        <item>Assembler</item>
        <item>Java</item>
        <item>C</item>
        <item>C++</item>
        <item>C#</item>
        <item>JavaScript</item>
        <item>Python</item>
        <item>VBS</item>
    </string-array>
    <string-array name="add_file_type">
        <item>File Type</item>
        <item>Executable</item>
        <item>Script</item>
        <item>App Package</item>
        <item>Document Macro</item>
        <item>Boot Sector</item>
    </string-array>
    <string-array name="link_type">
        <item>Link</item>
        <item>Media</item>
    </string-array>
    <string name="title_activity_info">InfoActivity</string>
    <string name="section_format">Placeholder section: %1$d</string>
    <string-array name="name_sample">
        <item>Elk Cloner</item>
        <item>AIDS.552</item>
        <item>Michelangelo</item>
        <item>Happy99</item>
        <item>Melissa.A</item>
        <item>ILOVEYOU</item>
        <item>Macur</item>
        <item>LoseLose</item>
        <item>HPS.5124</item>
    </string-array>
    <string-array name="type_sample">
        <item>Virus</item>
        <item>Virus</item>
        <item>Virus</item>
        <item>Worm</item>
        <item>Worm</item>
        <item>Worm</item>
        <item>Trojan Horse</item>
        <item>Trojan Horse</item>
        <item>Virus</item>
    </string-array>
    <string-array name="platform_sample">
        <item>Apple II</item>
        <item>DOS</item>
        <item>DOS</item>
        <item>Windows</item>
        <item>MS Office</item>
        <item>Windows</item>
        <item>Windows</item>
        <item>Mac OS X</item>
        <item>Windows</item>
    </string-array>
    <string-array name="source_sample">
        <item>Assembler</item>
        <item>Pascal</item>
        <item>Assembler</item>
        <item>Assembler</item>
        <item>Visual Basic</item>
        <item>Visual Basic</item>
        <item>C++</item>
        <item>C++</item>
        <item>C++</item>
    </string-array>
    <string-array name="filetype_sample">
        <item>Boot Sector</item>
        <item>Executable</item>
        <item>Boot Sector</item>
        <item>Executable</item>
        <item>Document Macro</item>
        <item>Script</item>
        <item>Executable</item>
        <item>Executable</item>
        <item>Executable</item>
    </string-array>
    <string-array name="size_sample">
        <item>0</item>
        <item>13952</item>
        <item>2354</item>
        <item>10000</item>
        <item>1890</item>
        <item>3672</item>
        <item>23564</item>
        <item>537654</item>
        <item>5124</item>
    </string-array>
    <string-array name="author_sample">
        <item>Richard Skrenta</item>
        <item>Dr. Theresa Goode</item>
        <item>Unknown</item>
        <item>Spanska</item>
        <item>David L. Smith</item>
        <item>Unknown</item>
        <item>Unknown</item>
        <item>Zach Gage</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="origin_sample">
        <item>Mount Lebanon, PA, USA</item>
        <item>United States</item>
        <item>New Zealand</item>
        <item>France</item>
        <item>Aberdeen Township, NJ, USA</item>
        <item>Phillipines</item>
        <item>Unknown</item>
        <item>United States</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="date_sample">
        <item>-.2.1982.</item>
        <item>-.4.1989.</item>
        <item>4.2.1991.</item>
        <item>27.1.1999.</item>
        <item>26.3.1999.</item>
        <item>4.5.2000.</item>
        <item>Unknown</item>
        <item>3.11.2009.</item>
        <item>-.-.1997.</item>
    </string-array>
    <string-array name="aliases_sample">
        <item>Elk Cloner;</item>
        <item>Virus.DOS.AIDS.552;</item>
        <item>Michelangelo;</item>
        <item>Ska;Happy99;WSOCK32.SKA;SKA.EXE;I-Worm.Happy;PE_SKA;Happy;</item>
        <item>Virus:W32/Melissa;W97M.Mailissa;Kwyjibo;Kwejeebo;</item>
        <item>VBS/LoveLet-AE [Sophos];VBS/LoveLetter.A-V@mm [Norman];VBS/LoveLetter [F-Secure];VBS/Loveletter@MM [McAfee];</item>
        <item>Trojan.Win32.Macur (Kaspersky Lab);Trojan: Macur (McAfee);Troj/Macur (Sophos);Trj/Macur (Panda);W32/Trojan!028f (FPROT);Trojan:Win32/Macur (MS(OneCare));Trojan.Macur (DrWeb);Win32/Macur trojan (Nod32);Trojan.Win32.Macur (BitDef7);Trojan.Macur.B (VirusBuster);Win32:Trojan-gen (AVAST);Trojan.Win32.Macur (Ikarus);Generic.KSI (AVG);TR/Macur.A (AVIRA);Trojan.Macur (NAV);W32/Macur.A (Norman);Macur (NAI);TROJ_MACUR.A (PCCIL);Trojan.Macur (Rising);Trojan.Win32.Macur [AVP] (FSecure);TROJ_MACUR.A (TrendMicro);Trojan.Macur.B (VirusBusterBeta);</item>
        <item>OSX_LOSEGAM.A [Trend];Trojan:OSX/Loosemaque.A [F-Secure];</item>
        <item>Win95.HPS.5124 (Kaspersky Lab);Virus: W95/HPS.gen (McAfee);W95/Hanta-PS (Sophos);W95/HPS (Panda);W32/HPS.5124 (FPROT)</item>
    </string-array>
    <string-array name="links_sample">
        <item>http://www.skrenta.com/cloner/|link;https://www.youtube.com/watch?v=bKtx8Ph7eoo|media;http://vignette2.wikia.nocookie.net/malware/images/e/e6/Elk-cloner.gif|media;</item>
        <item>https://www.youtube.com/watch?v=tckwz0ZS3Zo|media;http://vignette3.wikia.nocookie.net/malware/images/d/d6/Aids_computer_virus.png|media;http://home.mcafee.com/VirusInfo/VirusProfile.aspx?key=98148#none|link;</item>
        <item>http://web.archive.org/web/20110614112706/http://vx.netlux.org/lib/aeu02.html|link;https://www.youtube.com/watch?v=2Gx1Rs0WNnY|media;</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/6/6e/Happy99.PNG|media;https://www.youtube.com/watch?v=EiWDg-nSCVo|media;https://www.youtube.com/watch?v=b37Q1VwktVk|media;https://www.youtube.com/watch?v=Bwpt0EyOSM0|media;https://www.f-secure.com/v-descs/ska.shtml|link;https://www.symantec.com/security_response/writeup.jsp?docid=2000-121812-3151-99|link;</item>
        <item>https://www.symantec.com/security_response/writeup.jsp?docid=2000-122113-1425-99|link;http://www.f-secure.com/v-descs/melissa.shtml|link;https://www.youtube.com/watch?v=3d0MYdAAH5c|media;https://www.youtube.com/watch?v=pagPRTjnbhI|media;</item>
        <item>http://www.symantec.com/security_response/writeup.jsp?docid=2000-121815-2258-99|link;https://www.youtube.com/watch?v=ZqkFfF5kAvw|media;https://www.youtube.com/watch?v=9BtxDdq5dwc|media;https://www.youtube.com/watch?v=MzgaiIMjsh4|media;</item>
        <item>https://www.symantec.com/security_response/writeup.jsp?docid=2002-112913-4132-99|link;https://www.youtube.com/watch?v=_apjJyW5TSc|media;</item>
        <item>http://www.symantec.com/content/en/us/global/images/threat_writeups/2009-110309-3638-99.1.jpg|media;https://www.youtube.com/watch?v=DSlYnns98TM|media;http://www.symantec.com/connect/blogs/osxloosemaque-it-s-not-just-game-anymore|link;</item>
        <item>https://www.youtube.com/watch?v=UtgBhvsaZIU|media;</item>
    </string-array>
</resources>