<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.tvz.lab.tom.malwaredb.add.AddActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editName"
                android:hint="@string/malware_name"
                android:inputType="text" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerType"
                    android:spinnerMode="dropdown"
                    android:layout_weight="0.5"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerPlatform"
                    android:spinnerMode="dropdown"
                    android:layout_weight="0.5"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerSourceLanguage"
                    android:spinnerMode="dropdown"
                    android:layout_weight="0.5"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerFileType"
                    android:spinnerMode="dropdown"
                    android:layout_weight="0.5"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editSize"
                android:hint="@string/malware_size"
                android:inputType="number" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editAuthor"
                android:hint="@string/malware_author"
                android:inputType="text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editOrigin"
                android:hint="@string/malware_origin"
                android:inputType="text" />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editDiscoveryDate"
                    android:hint="@string/malware_date_discovery"
                    android:layout_weight="1"
                    android:inputType="date" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="+"
                    android:id="@+id/buttonSetDate"
                    android:layout_marginTop="-5dp"
                    android:layout_marginRight="5dp"
                    android:onClick="onClickSetDiscoveryDate" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editAliases"
                    android:hint="@string/malware_aliases"
                    android:layout_weight="1" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="+"
                    android:id="@+id/buttonAddAlias"
                    android:layout_marginTop="-5dp"
                    android:layout_marginRight="5dp"
                    android:onClick="onClickAddAlias" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editLinks"
                    android:hint="@string/malware_links"
                    android:layout_weight="1" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerLinkType"
                    android:layout_weight="0.7" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="+"
                    android:id="@+id/buttonAddLink"
                    android:layout_marginTop="-5dp"
                    android:layout_marginRight="5dp"
                    android:onClick="onClickAddLink" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editDescription"
                android:hint="@string/malware_description" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
